@@ -82,7 +82,7 @@
 		<dependency>
 			<groupId>com.qubit.solution.qubEdu.module</groupId>
 			<artifactId>fenixedu-treasury-base-iscte</artifactId>
-			<version>8.5.1</version>
+			<version>8.6.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.fenixedu</groupId>
